--- a/app/components/common/setup/setup_invited.html
+++ b/app/components/common/setup/setup_invited.html
@@ -1,7 +1,6 @@
-
 <div class="hpanel">
     <div class="panel-heading" style="text-align:center;">
-        <h4 style="font-size: 25px; line-height: 1.25;">James{{setup.user.profile.linkedin.firstName}}, please identify your roles in the community:</h4>
+        <h4 style="font-size: 25px; line-height: 1.25;">{{setup.user.profile.linkedin.firstName}}, please identify your roles in the community:</h4>
     </div>
     <div class="panel-body no-padding">
         <div class="list-group ">
