--- a/app/less/various.less
+++ b/app/less/various.less
@@ -754,12 +754,14 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 
 .list-group-item-heading {
   margin-top: 10px;
+  font-size: 18px;
 }
 
 .list-group-item-text {
   margin: 0 0 10px;
   color: inherit;
   line-height: inherit;
+  font-size: 14px;
 }
 
 .list-group-item {
