--- a/app/less/login.less
+++ b/app/less/login.less
@@ -8,6 +8,12 @@ body.blank {
   padding-top: 6%;
 }
 
+.welcome-container {
+  width: 470px;
+  margin:auto;
+  padding-top: 3%;
+}
+
 .register-container {
   width: 720px;
   margin:auto;
