--- a/app/components/common/auth/login.html
+++ b/app/components/common/auth/login.html
@@ -10,7 +10,10 @@
                 <div class="hpanel">
                     <div class="panel-body" style="padding: 15px; border-top: 1px solid #82bc4b;">
                         <h4 class="text-center" style="margin-bottom: 20px; color: #5A5A5A;">Kickstart your city's entrepreneurial ecosystem</h4>
-                        <h4 class="text-center" style="margin-bottom: 13px;"><a class="btn btn-info" ng-click="auth.authenticate('linkedin')">Log in using Linkedin</a></h4>
+                        <h4 class="text-center" style="margin-bottom: 13px;">
+                            <button class="btn btn-info" ng-click="auth.authenticate('linkedin')" ng-class="{'disabled' : auth.working}">Log in using Linkedin</button>
+                        </h4>
+
                         <div ng-show="auth.alert">
                             <alert type="{{auth.alert.type}}" style="margin: 2px;" ng-click="auth.alert = undefined"><span ng-bind-html="auth.alert.msg | safe_html"></span></alert>
                         </div>
