--- a/app/components/common/welcome/welcome.setup.html
+++ b/app/components/common/welcome/welcome.setup.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <br>
-    <h4 class="text-center" style="margin-bottom: 13px;"><a class="btn btn-info" ng-click="welcome.submitRoles()">Continue</a></h4>
+    <h4 style="margin-bottom: 13px;"><a class="btn btn-info pull-right" ui-sref="welcome.founder">Continue</a></h4>
     <div ng-show="welcome.alert">
         <alert type="{{welcome.alert.type}}" style="margin: 2px; text-align: center;" ng-click="welcome.alert = undefined"><span ng-bind-html="welcome.alert.msg | safe_html"></span></alert>
     </div>
