invite api working ok

--- a/app/components/common/welcome/welcome.html
+++ b/app/components/common/welcome/welcome.html
@@ -17,7 +17,7 @@
                             <h5 style="text-align: center;" >Please log in to get started.</h5>
                             <br>
                             <div ng-show="welcome.alert">
-                                <alert type="{{welcome.alert.type}}" style="margin: 2px; text-align: center;" ng-click="welcome.alert = undefined"><span ng-bind-html="welcome.alert.msg | safe_html"></span></alert>
+                                <alert type="{{welcome.alert.type}}" style="margin: 2px; text-align: center;" ng-click="welcome.alert = undefined"><span ng-bind-html="welcome.alert.message | safe_html"></span></alert>
                             </div>
                         </div>
                         <div ng-if="welcome.auth" ui-view></div>
