--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,31 @@
 /* Custom */
 
+/* Knowtify */
+
+body #inbox_message_count.show {
+  position: absolute;
+  top: 13px;
+  right: 9px;
+  z-index: 2;
+  width: 10px;
+  height: 10px;
+  color: #fff;
+  text-align: center;
+  background-clip: padding-box;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  min-width: 0;
+  line-height: 1;
+  font-size: 12px;
+  background-image: -webkit-linear-gradient(#7aa1d3, #4078c0);
+  background-image: linear-gradient(#7aa1d3, #4078c0);
+}
+
+body #inbox_header_text, body #inbox_mark_read, body #inbox_footer, body #inbox_messages, body #inbox_message .message .heading, body #inbox_message .message .description  {
+  font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: normal;
+}
+
 .input-lg {
   line-height: 1.5 !important;
 }
