industries and skills working

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,21 @@
 /* Custom */
 
+#industry_select input.ui-select-search.input-xs {
+  font-size: 20px;
+}
+
+#industry_select input.ui-select-search.input-xs::-webkit-input-placeholder { font-size: 16px; line-height: 2;}
+#industry_select input.ui-select-search.input-xs::-moz-placeholder  { font-size: 16px; line-height: 2;}
+#industry_select input.ui-select-search.input-xs:-ms-input-placeholder { font-size: 16px; line-height: 2;}
+
+#industry_select span.ui-select-match-item.btn.btn-default.btn-xs {
+  font-size: 14px;
+}
+
+.ui-select-multiple.ui-select-bootstrap .ui-select-match .close {
+  line-height: 1;
+}
+
 /* Knowtify */
 
 body #inbox_message_count.show {
@@ -17,8 +33,7 @@ body #inbox_message_count.show {
   min-width: 0;
   line-height: 1;
   font-size: 12px;
-  background-image: -webkit-linear-gradient(#7aa1d3, #4078c0);
-  background-image: linear-gradient(#7aa1d3, #4078c0);
+  background-color: #3498db;
 }
 
 body #inbox_header_text, body #inbox_mark_read, body #inbox_footer, body #inbox_messages, body #inbox_message .message .heading, body #inbox_message .message .description  {
