--- a/app/components/common/welcome/welcome.industries.html
+++ b/app/components/common/welcome/welcome.industries.html
@@ -3,7 +3,7 @@
         <h4 style="font-size: 25px; line-height: 1.25;">Thank you. Now select up to three industries that you specialize in.</h4>
     </div>
     <div class="panel-body no-padding" id="industry_select">
-            <ui-select multiple ng-model="welcome.industries.selected" ng-disabled="disabled" limit="3" alert_title="Sorry, only 3 industries here." alert_text="Focus on industries that you are a real badass in." alert_type="warning">
+            <ui-select multiple ng-model="welcome.industries.selected" ng-disabled="disabled" limit="3" alert_title="Sorry, only 3 industries here." alert_text="Focus on industries that you are a real badass in." alert_type="warning" style="border:none;">
                     <ui-select-match placeholder="Search by industry..">{{$item}}</ui-select-match>
                     <ui-select-choices repeat="industry in welcome.industries | filter:$select.search | limitTo: 25">
                             {{industry}}
