working on profile verification

--- a/app/components/common/welcome/welcome.industries.html
+++ b/app/components/common/welcome/welcome.industries.html
@@ -18,5 +18,5 @@
     </div>
     <h4 style="margin-bottom: 13px;">
         <a class="btn btn-info pull-left" ui-sref="welcome.setup">Back</a>
-        <a class="btn btn-info pull-right" ng-click="welcome.industries.submit()">Continue</a></h4>
+        <a class="btn btn-info pull-right" ui-sref="welcome.skills">Continue</a></h4>
 </div>
