--- a/app/components/common/welcome/welcome.skills.html
+++ b/app/components/common/welcome/welcome.skills.html
@@ -18,5 +18,5 @@
     </div>
     <h4 style="margin-bottom: 13px;">
         <a class="btn btn-info pull-left" ui-sref="welcome.industries">Back</a>
-        <a class="btn btn-info pull-right" ng-click="welcome.skills.submit()">Continue</a></h4>
+        <a class="btn btn-info pull-right" ui-sref="welcome.profile">Continue</a></h4>
 </div>
