--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -1,6 +1,6 @@
 <div class="hpanel">
     <div class="panel-heading" style="text-align:center;">
-        <h4 style="font-size: 25px; line-height: 1.25;">{{welcome.user.profile.linkedin.firstName}}, you are a <strong>Founder</strong>.<br><br>
+        <h4 style="font-size: 25px; line-height: 1.25;">Ok {{welcome.user.profile.linkedin.firstName}}, here's what we've got:<br><br>
         We require an <a target="_blank" href="https://angel.co">AngelList</a> profile URL to add your startup to the community.</h4>
     </div>
     <div class="panel-body no-padding">
