--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,10 @@
 /* Custom */
 
+#uploader_text:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 #industry_select input.ui-select-search.input-xs {
   font-size: 20px;
 }
