--- a/app/components/common/welcome/welcome.founder.html
+++ b/app/components/common/welcome/welcome.founder.html
@@ -24,5 +24,5 @@
     </div>
     <h4 style="margin-bottom: 13px;">
         <a class="btn btn-info pull-left" ui-sref="welcome.setup">Back</a>
-        <a class="btn btn-info pull-right" ng-click="welcome.submitFounder()">Continue</a></h4>
+        <a class="btn btn-info pull-right" ng-click="welcome.submit()">Continue</a></h4>
 </div>
