--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -1,8 +1,17 @@
 <div class="hpanel">
     <div class="panel-heading" style="text-align:center;">
-        <h4 style="font-size: 25px; line-height: 1.25;">{{welcome.user.profile.linkedin.firstName}}, here's what we've got for you:</h4><br/>
+        <h4 style="font-size: 25px; line-height: 1.25;">{{welcome.user.profile.linkedin.firstName}}, please verify your profile:</h4><br/>
         <img class="img-circle m-b" style="height:75px;" ng-src="{{welcome.user.profile.linkedin.pictureUrl || welcome.user.profile.avatar || 'images/blank_avatar.png'}}">
+        <div style="margin-left: -10px; padding-top: 1px;">
+            <span ng-repeat="(item, val) in welcome.roles" class="user-role"><i ng-attr-title="{{item.toUpperCase()[0] + item.slice(1);}}" ng-class="{'text-primary fa fa-rocket' : item == 'founder', 'text-info fa fa-graduation-cap' : item == 'mentor', 'text-success fa fa-leaf' : item == 'investor', 'text-default fa fa-dribbble' : item == 'team', 'text-warning fa fa-briefcase' : item == 'provider'}"></i></span>
+        </div>
         <br/>
+
+        <button class="btn btn-default" s3 options="welcome.profile.options" ng-model="welcome.profile.image">
+            Select File
+        </button>
+
+
         <label id="uploader_text">
                 <input type="file" ng-file-select="welcome.onImageSelect(image)" ng-model="image" style="display:none;"/>
                 <img ng-show="welcome.dataUrls['image']" ng-src="{{welcome.dataUrls['image']}}">
@@ -10,20 +19,14 @@
         </label>
 
     </div>
-    <div class="panel-body no-padding">
-        <div style="padding: 20px 20px 60px 20px;">
-            <form role="form" name="welcome.founder.form" novalidate ng-submit="welcome.addStartup(nav.location_path, nav.community.key)">
-                <div class="form-group">
-                    <label>AngelList URL:</label>
-                    <input type="text" placeholder="https://angel.co/startupcommunity" class="form-control input-lg" name="url" required ng-model="welcome.founder.form.url_value">
-                    <div class="m-t-xs" ng-show="welcome.founder.form.url.$invalid && welcome.founder.form.submitted">
-                        <span class="text-danger" ng-show="welcome.founder.form.url.$error">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> We can't import their profile without an AngelList URL..</span>
-                    </div>
-                </div>
-                <input type="submit" style="float:left" class="finish btn-success btn" ng-class="{'disabled' : disabled, 'disabled' : welcome.working}" value="Add Startup" />
-            </form>
-        </div>
-    </div>
+    <h4 style="line-height:1.75;">
+    Your name is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.name">{{welcome.user.profile.name}}</a>, your email address is <a style="color:#4ea5e0;" editable-email="welcome.user.profile.email">{{welcome.user.profile.email}}</a> and your headline is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.headline">{{welcome.user.profile.headline}}</a>.
+        <br/><br/>
+    Click to edit your summary if needed:<br/><br/>
+    <a editable-textarea="welcome.user.profile.summary" e-rows="7" e-cols="40">
+        <pre style="background: none;">{{welcome.user.profile.summary}}</pre>
+    </a>
+    </h4>
     <br>
     <div ng-show="welcome.alert" class="alert" ng-class="{'alert-success' : welcome.alert.type == 'success', 'alert-danger' : welcome.alert.type == 'danger'}">
             {{ welcome.alert.message }}
