--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -6,7 +6,7 @@
         <br/>
         <label id="uploader_text">
             <input type="file" ng-model="file" name="file" ngf-pattern="'image/*'"
-                   accept="image/*" ngf-max-size="5MB" ngf-min-height="50"
+                   accept="image/*" ngf-max-size="2MB" ngf-min-height="50"
                    ngf-resize="{width: 75, height: 75}" ngf-select="welcome.upload($file)" style="display:none;"/>
             <h6>Change picture..</h6>
         </label>
@@ -14,13 +14,12 @@
             <span ng-repeat="(item, val) in welcome.roles" class="user-role"><i ng-attr-title="{{item.toUpperCase()[0] + item.slice(1);}}" ng-class="{'text-primary fa fa-rocket' : item == 'founder', 'text-info fa fa-graduation-cap' : item == 'mentor', 'text-success fa fa-leaf' : item == 'investor', 'text-default fa fa-dribbble' : item == 'team', 'text-warning fa fa-briefcase' : item == 'provider'}"></i></span>
         </div>
 
-    </button>
     <h4 style="line-height:1.75;">
     Your name is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.name">{{welcome.user.profile.name}}</a>, your email address is <a style="color:#4ea5e0;" editable-email="welcome.user.profile.email">{{welcome.user.profile.email}}</a> and your headline is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.headline">{{welcome.user.profile.headline}}</a>.
         <br/><br/>
     Click to edit your summary if needed:<br/><br/>
     <a editable-textarea="welcome.user.profile.summary" e-rows="7" e-cols="40">
-        <pre style="background: none;">{{welcome.user.profile.summary}}</pre>
+        <pre style="background: none; font-family: inherit; font-size: 14px; text-align: left;">{{welcome.user.profile.summary}}</pre>
     </a>
     </h4>
     <br>
