--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,10 @@
 /* Custom */
 
+.close {
+  line-height: .8;
+  color: #333;
+}
+
 #uploader_text:hover {
   text-decoration: underline;
   cursor: pointer;
