fixed alert directive

--- a/app/components/common/welcome/welcome.html
+++ b/app/components/common/welcome/welcome.html
@@ -20,7 +20,7 @@
                             <hr>
                             <h5 style="text-align: center;" >Please log in to get started.</h5>
                             <br>
-                            <div alert-box scope="welcome"></div>
+                            <div alert-box this-alert="welcome.alert"></div>
                         </div>
                         <div ng-if="welcome.auth" ui-view></div>
                     </div>
