--- a/app/components/common/welcome/welcome.setup.html
+++ b/app/components/common/welcome/welcome.setup.html
@@ -36,8 +36,6 @@
         </div>
     </div>
     <br>
-    <div ng-show="welcome.alert">
-        <alert type="{{welcome.alert.type}}" style="margin: 2px; text-align: center;" ng-click="welcome.alert = undefined"><span ng-bind-html="welcome.alert.message | safe_html"></span></alert>
-    </div>
+    <div alert-box this-alert="welcome.alert"></div>
     <h4 style="margin-bottom: 13px;"><a class="btn btn-info pull-right" ui-sref="welcome.industries">Continue</a></h4>
 </div>
