--- a/app/components/common/welcome/welcome.founder.html
+++ b/app/components/common/welcome/welcome.founder.html
@@ -18,10 +18,7 @@
         </div>
     </div>
     <br>
-    <div ng-show="welcome.alert" class="alert" ng-class="{'alert-success' : welcome.alert.type == 'success', 'alert-danger' : welcome.alert.type == 'danger'}">
-            {{ welcome.alert.message }}
-        <i class="pe-7s-close pull-right" ng-click="welcome.alert = undefined"></i>
-    </div>
+    <div alert-box this-alert="welcome.alert"></div>
     <h4 style="margin-bottom: 13px;">
         <a class="btn btn-info pull-left" ui-sref="welcome.setup">Back</a>
         <a class="btn btn-info pull-right" ng-click="welcome.submit()">Continue</a></h4>
