--- a/app/components/common/welcome/welcome.industries.html
+++ b/app/components/common/welcome/welcome.industries.html
@@ -12,10 +12,7 @@
     </div>
     <br>
         <p style="text-align: center;">Industries are ecosystems of people and startups, such as Tech, Aviation, Healthcare, etc. You can add more later.</p>
-    <div ng-show="welcome.alert" class="alert" ng-class="{'alert-success' : welcome.alert.type == 'success', 'alert-danger' : welcome.alert.type == 'danger'}">
-            {{ welcome.alert.message }}
-        <i class="pe-7s-close pull-right" ng-click="welcome.alert = undefined"></i>
-    </div>
+    <div alert-box this-alert="welcome.alert"></div>
     <h4 style="margin-bottom: 13px;">
         <a class="btn btn-info pull-left" ui-sref="welcome.setup">Back</a>
         <a class="btn btn-info pull-right" ui-sref="welcome.skills">Continue</a></h4>
