--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -1,8 +1,10 @@
 <div class="hpanel">
     <div class="panel-heading" style="text-align:center;">
-        <h4 style="font-size: 25px; line-height: 1.25;">{{welcome.user.profile.linkedin.firstName}}, please verify your profile:</h4><br/>
+        <h4 style="font-size: 25px; line-height: 1.25;">{{welcome.user.profile.linkedin.firstName}}, please verify your
+            profile:</h4><br/>
 
-        <img class="img-circle m-b" style="height:75px;" ngf-thumbnail="welcome.user.profile.avatar || file || 'images/blank_avatar.png'">
+        <img class="img-circle m-b" style="height:75px;"
+             ngf-thumbnail="welcome.user.profile.avatar || file || 'images/blank_avatar.png'">
         <br/>
         <label id="uploader_text">
             <input type="file" ng-model="file" name="file" ngf-pattern="'image/*'"
@@ -10,24 +12,28 @@
                    ngf-resize="{width: 75, height: 75}" ngf-select="welcome.upload($file)" style="display:none;"/>
             <h6>Change picture..</h6>
         </label>
+
         <div style="margin-left: -10px; padding-top: 1px;">
-            <span ng-repeat="(item, val) in welcome.roles" class="user-role"><i ng-attr-title="{{item.toUpperCase()[0] + item.slice(1);}}" ng-class="{'text-primary fa fa-rocket' : item == 'founder', 'text-info fa fa-graduation-cap' : item == 'mentor', 'text-success fa fa-leaf' : item == 'investor', 'text-default fa fa-dribbble' : item == 'team', 'text-warning fa fa-briefcase' : item == 'provider'}"></i></span>
+            <span ng-repeat="(item, val) in welcome.roles" class="user-role"><i
+                    ng-attr-title="{{item.toUpperCase()[0] + item.slice(1);}}"
+                    ng-class="{'text-primary fa fa-rocket' : item == 'founder', 'text-info fa fa-graduation-cap' : item == 'mentor', 'text-success fa fa-leaf' : item == 'investor', 'text-default fa fa-dribbble' : item == 'team', 'text-warning fa fa-briefcase' : item == 'provider'}"></i></span>
         </div>
 
-    <h4 style="line-height:1.75;">
-    Your name is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.name">{{welcome.user.profile.name}}</a>, your email address is <a style="color:#4ea5e0;" editable-email="welcome.user.profile.email">{{welcome.user.profile.email}}</a> and your headline is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.headline">{{welcome.user.profile.headline}}</a>.
-        <br/><br/>
-    Click to edit your summary if needed:<br/><br/>
-    <a editable-textarea="welcome.user.profile.summary" e-rows="7" e-cols="40">
-        <pre style="background: none; font-family: inherit; font-size: 14px; text-align: left;">{{welcome.user.profile.summary}}</pre>
-    </a>
-    </h4>
-    <br>
-    <div ng-show="welcome.alert" class="alert" ng-class="{'alert-success' : welcome.alert.type == 'success', 'alert-danger' : welcome.alert.type == 'danger'}">
-            {{ welcome.alert.message }}
-        <i class="pe-7s-close pull-right" ng-click="welcome.alert = undefined"></i>
+        <h4 style="line-height:1.75;">
+            Your name is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.name">{{welcome.user.profile.name}}</a>,
+            your email address is <a style="color:#4ea5e0;" editable-email="welcome.user.profile.email">{{welcome.user.profile.email}}</a>
+            and your headline is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.headline">{{welcome.user.profile.headline}}</a>.
+            <br/><br/>
+            Click to edit your summary if needed:<br/><br/>
+            <a editable-textarea="welcome.user.profile.summary" e-rows="7" e-cols="40">
+                <pre style="background: none; font-family: inherit; font-size: 14px; text-align: left;">{{welcome.user.profile.summary}}</pre>
+            </a>
+        </h4>
+        <br>
+
+        <div alert-box this-alert="welcome.alert"></div>
+        <h4 style="margin-bottom: 13px;">
+            <a class="btn btn-info pull-left" ui-sref="welcome.setup">Back</a>
+            <a class="btn btn-info pull-right" ng-click="welcome.submit()">Continue</a></h4>
     </div>
-    <h4 style="margin-bottom: 13px;">
-        <a class="btn btn-info pull-left" ui-sref="welcome.setup">Back</a>
-        <a class="btn btn-info pull-right" ng-click="welcome.submit()">Continue</a></h4>
 </div>
