fixed mobile for welcome page

--- a/app/components/common/auth/login.html
+++ b/app/components/common/auth/login.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="text-center m-b-md">
-                    <a href="/"><img src="../images/sc_logo.png" alt="StartupCommunity.org Logo"/></a>
+                    <a href="/"><img style="width:75%" src="../images/sc_logo.png" alt="StartupCommunity.org Logo"/></a>
                 </div>
                 <div class="hpanel">
                     <div class="panel-body" style="padding: 15px; border-top: 1px solid #82bc4b;">
