--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,13 @@
 /* Custom */
 
+
+//for xeditable
+
+#summary_form .editable-buttons {
+  display: block;
+}
+
+// for alerts
 .close {
   line-height: .8;
   color: #333;
