--- a/app/less/login.less
+++ b/app/less/login.less
@@ -2,14 +2,9 @@ body.blank {
   background-color: @color-background;
 }
 
-.login-container {
-  width: 420px;
-  margin:auto;
-  padding-top: 6%;
-}
-
-.welcome-container {
-  width: 470px;
+.login-container, .welcome-container {
+  width: 85%;
+  max-width: 600px;
   margin:auto;
   padding-top: 3%;
 }
