renamed startups to companies

--- a/app/components/common/header/header_small.html
+++ b/app/components/common/header/header_small.html
@@ -17,7 +17,7 @@
                 </ol>
             </div>
             <h2 class="font-light pull-right m-b-xs">
-                <span style="text-transform: none;">{{ $state.params.pageTitle }}&nbsp;<span ng-if="nav.community.type !== 'user' && nav.community.type !== 'startup'">in {{ nav.community.community_profiles[nav.location_path].name || nav.community.profile.name }}</span>
+                <span style="text-transform: none;">{{ $state.params.pageTitle }}&nbsp;<span ng-if="nav.community.type !== 'user' && nav.community.type !== 'company'">in {{ nav.community.community_profiles[nav.location_path].name || nav.community.profile.name }}</span>
                 </span>
             </h2>
         </div>
