--- a/app/components/common/search/search.dashboard.html
+++ b/app/components/common/search/search.dashboard.html
@@ -11,10 +11,10 @@
             </tab>
             <tab>
                 <tab-heading>
-                    Startups
+                    Companies
                 </tab-heading>
                 <div class="panel-body" style="padding: 25px;">
-                    <div ui-view="startups"></div>
+                    <div ui-view="companies"></div>
                 </div>
             </tab>
         </tabset>
