--- a/app/components/common/welcome/welcome.setup.html
+++ b/app/components/common/welcome/welcome.setup.html
@@ -21,7 +21,7 @@
             <a class="list-group-item" ng-class="{'active' : welcome.roles.team}" ng-click="welcome.roles.team = !welcome.roles.team">
                 <div class="stats-icon pull-right" ng-show="welcome.roles.team"><i class="pe-7s-check fa-2x"></i></div>
                 <h5 class="list-group-item-heading">Team Member</h5>
-                <p class="list-group-item-text">You are a current employee or team member of a local startup.</p>
+                <p class="list-group-item-text">You are a current employee or team member of a local company.</p>
             </a>
             <a class="list-group-item" ng-class="{'active' : welcome.roles.mentor}" ng-click="welcome.roles.mentor = !welcome.roles.mentor">
                 <div class="stats-icon pull-right" ng-show="welcome.roles.mentor"><i class="pe-7s-check fa-2x"></i></div>
@@ -37,5 +37,5 @@
     </div>
     <br>
     <div alert-box this-alert="welcome.alert"></div>
-    <h4 style="margin-bottom: 13px;"><a class="btn btn-info pull-right" ui-sref="welcome.industries">Continue</a></h4>
+    <h4 style="margin-bottom: 13px;"><a class="btn btn-info pull-right" ui-sref="welcome.skills">Continue</a></h4>
 </div>
