--- a/app/less/various.less
+++ b/app/less/various.less
@@ -11,6 +11,7 @@
 .close {
   line-height: .8;
   color: #333;
+  padding-left: 15px;
 }
 
 #uploader_text:hover {
@@ -540,7 +541,7 @@ footer, .push {
 }
 
 #side-menu li .nav-second-level li ul li {
-  // this is for people and startups sub-nav links
+  // this is for people and companies sub-nav links
   margin-left: -40px;
   padding: 5px 0 5px 20px;
   border-left: 3px solid #eee;
