--- a/app/components/common/welcome/welcome.profile.html
+++ b/app/components/common/welcome/welcome.profile.html
@@ -24,11 +24,11 @@
                 your email address is <a style="color:#4ea5e0;" editable-email="welcome.user.profile.email">{{welcome.user.profile.email}}</a>
                 and your headline is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.headline">{{welcome.user.profile.headline}}</a>.
                 <br/><br/>
-                Click to edit your summary if needed:
+                Here's your summary:
             </h4>
         </div>
         <div id="summary_form">
-            <a editable-textarea="welcome.user.profile.summary" e-rows="7" e-cols="40">
+            <a editable-textarea="welcome.user.profile.summary" e-rows="12" e-cols="60">
                 <pre style="background: none; font-family: inherit; font-size: 14px; text-align: left;">{{welcome.user.profile.summary}}</pre>
             </a>
         </div>
@@ -37,6 +37,6 @@
         <div alert-box this-alert="welcome.alert"></div>
         <h4 style="margin-bottom: 13px;">
             <a class="btn btn-info pull-left" ui-sref="welcome.setup">Back</a>
-            <a class="btn btn-info pull-right" ng-click="welcome.submit()">Continue</a></h4>
+            <a class="btn btn-info pull-right" ui-sref="welcome.companies">Continue</a></h4>
     </div>
 </div>
