--- a/app/components/companies/company.add.html
+++ b/app/components/companies/company.add.html
@@ -19,7 +19,7 @@
                 &nbsp;{{ add.alert.message }}
             </div>
             <div style="padding: 20px 20px 60px 20px;">
-                <form role="form" name="add.form" novalidate ng-submit="add.addStartup(nav.location_path, nav.community.key)">
+                <form role="form" name="add.form" novalidate ng-submit="add.addCompany(nav.location_path, nav.community.key)">
                     <div class="form-group">
                         <label>AngelList URL:</label>
                         <input type="text" placeholder="https://angel.co/startupcommunity" class="form-control input-lg" name="url" required ng-model="add.form.url_value">
@@ -27,7 +27,7 @@
                             <span class="text-danger" ng-show="add.form.url.$error">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> We can't import their profile without an AngelList URL..</span>
                         </div>
                     </div>
-                    <input type="submit" style="float:left" class="finish btn-success btn" ng-class="{'disabled' : disabled, 'disabled' : add.working}" value="Add Startup" />
+                    <input type="submit" style="float:left" class="finish btn-success btn" ng-class="{'disabled' : disabled, 'disabled' : add.working}" value="Add Company" />
                 </form>
             </div>
         </div>
