--- a/app/components/locations/location.dashboard.html
+++ b/app/components/locations/location.dashboard.html
@@ -22,7 +22,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">29</span>
-                            <small>Startups</small>
+                            <small>Companies</small>
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">167</span>
@@ -49,7 +49,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">9</span>
-                            <small>Startups</small>
+                            <small>Companies</small>
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">74</span>
@@ -76,7 +76,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">6</span>
-                            <small>Startups</small>
+                            <small>Companies</small>
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">74</span>
@@ -115,7 +115,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">0</span>
-                            <small>Startups</small>
+                            <small>Companies</small>
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
@@ -129,7 +129,7 @@
                         <div class="col-md-7 forum-heading" style="padding-top: 5px;">
                             <span class="label label-success pull-left">Accelerator</span>
                             <a ui-sref="#"><h4> FoundersPad</h4></a>
-                            <div class="desc" style="margin-bottom:5px;">Regional accelerator for software startups.</div>
+                            <div class="desc" style="margin-bottom:5px;">Regional accelerator for software companies.</div>
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">18</span>
@@ -141,7 +141,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">9</span>
-                            <small>Startups</small>
+                            <small>Companies</small>
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
@@ -167,7 +167,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">25</span>
-                            <small>Startups</small>
+                            <small>Companies</small>
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
@@ -260,15 +260,15 @@
                 <div class="panel-body" style="padding: 10px 5px;">
                     <div class="col-xs-2">
                         <div class="stats-title pull-left">
-                            <h3>Startups</h3>
+                            <h3>Companies</h3>
                         </div>
                         <div class="m-t-xl">
                             <h1 class="text-success">79</h1>
                         </div>
                     </div>
                     <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="loc.charts.startups.data"
-                                labels="loc.charts.startups.labels" series="loc.charts.startups.series" colours="loc.charts.startups.colors" options="loc.charts.options" height="95" style="padding: 0 15px;">
+                        <canvas class="chart chart-line" data="loc.charts.companies.data"
+                                labels="loc.charts.companies.labels" series="loc.charts.companies.series" colours="loc.charts.companies.colors" options="loc.charts.options" height="95" style="padding: 0 15px;">
                         </canvas>
                     </div>
                     <div class="col-xs-2">
