--- a/app/components/networks/network.dashboard.html
+++ b/app/components/networks/network.dashboard.html
@@ -79,15 +79,15 @@
                 <div class="panel-body" style="padding: 10px 5px;">
                     <div class="col-xs-2">
                         <div class="stats-title pull-left">
-                            <h3>Startups</h3>
+                            <h3>Companies</h3>
                         </div>
                         <div class="m-t-xl">
                             <h1 class="text-success">79</h1>
                         </div>
                     </div>
                     <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="net.charts.startups.data"
-                                labels="net.charts.startups.labels" series="net.charts.startups.series" colours="net.charts.startups.colors" options="net.charts.options" height="95" style="padding: 0 15px;">
+                        <canvas class="chart chart-line" data="net.charts.companies.data"
+                                labels="net.charts.companies.labels" series="net.charts.companies.series" colours="net.charts.companies.colors" options="net.charts.options" height="95" style="padding: 0 15px;">
                         </canvas>
                     </div>
                     <div class="col-xs-2">
@@ -247,7 +247,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">29</span>
-                            <small>Startups</small>
+                            <small>Companies</small>
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">167</span>
@@ -274,7 +274,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">9</span>
-                            <small>Startups</small>
+                            <small>Companies</small>
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">74</span>
@@ -301,7 +301,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">6</span>
-                            <small>Startups</small>
+                            <small>Companies</small>
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">74</span>
@@ -340,7 +340,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">0</span>
-                            <small>Startups</small>
+                            <small>Companies</small>
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
@@ -354,7 +354,7 @@
                         <div class="col-md-7 forum-heading">
                             <span class="label label-success pull-left">Accelerator</span>
                             <a ui-sref="#"><h4> FoundersPad</h4></a>
-                            <div class="desc" style="margin-bottom:5px;">Regional accelerator for software startups.</div>
+                            <div class="desc" style="margin-bottom:5px;">Regional accelerator for software companies.</div>
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">18</span>
@@ -366,7 +366,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">9</span>
-                            <small>Startups</small>
+                            <small>Companies</small>
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
@@ -392,7 +392,7 @@
                         </div>
                         <div class="col-md-1 forum-info">
                             <span class="number">25</span>
-                            <small>Startups</small>
+                            <small>Companies</small>
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
